--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,9 @@
 .App-link {
   color: #61dafb;
 }
-
+body{
+  max-width: 100%;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
