--- a/src/components/DeliveryInput/style.css
+++ b/src/components/DeliveryInput/style.css
@@ -1,49 +1,39 @@
-.header_inputDelivery{
-    color:  #626262;
-    width: 85%;
-    border: none;
-    height: 40px;
-    border: 1px solid #E0E0E0;
-    padding-left: 30px;
-    font-size: 16px;
+.header_input{
+    font-size: 13px;
     font-family: Roboto;
     line-height : 24px;
     font-style: normal;
 }
 .header_delivery{
     display: flex;
-    justify-content:space-around;
     position: relative;
-
-
 }
 .header_deliveryLocation{
     position: absolute;
     display: flex;
     align-items: center;
-    padding-top: 10px;
-    left: 5%;
+}
+.header_deliveryLocation img{
+    width: 40px;
+    height: 40px;
 }
 .header_deliveryWhen{
     border: 1px solid #E0E0E0;
-
     border-radius: 2px;
-    width: 65px;
     height: 40px;
     padding-left: 10px;
 
 }
 .header_deliveryLabel{
     color:#626262 ;
-    font-size: 12px;
+    font-size: 11px;
+    line-height: 13px;
     padding-bottom: 5px;
 }
 .header_deliveryContainer{
     display: flex;
     justify-content: center;
-    padding-top: 48px;
-    width: 100%;
-
+    padding: 48px 5px 0 10px;
 }
 .header_deliveryСase{
     display: flex;
@@ -53,18 +43,30 @@
 }
 .header_deliveryСase__when{
     padding-right: 10px;
-}
-.header_deliveryСase__to{
-    width: 70%
+    width: 20%;
 
 }
+.header_deliveryСase__to{
+    width: 80%;
+
+
+}
+.header_deliveryTo{
+    color:  black;
+    height: 40px;
+    border: 1px solid #E0E0E0;
+    padding-left: 30px;
+    font-style: normal;
+    width: 100%;
+}
+
 
 .header_inputDelivery--background{
     background: #F2F2F2;
 }
 .deliveryContainerMenu{
     padding-top: 20px;
-    display: none;
+
 }
 
 .deliveryContainerMenu_deliveryСase__when{
@@ -87,29 +89,28 @@
         padding-right: 0px;
     }
     .header_deliveryContainer{
-        display: none;
         padding: 0;
+        max-width: 375px;
         width: 50%;
+
+    }
+    .header_input{
+        line-height: 24px;
+        font-size: 16px;
+    }
+    .header_inputDelivery--background{
+        background: white;
     }
     .deliveryContainerMenu{
         display: flex;
     }
-    .header_inputDelivery{
-        width: 250px;
-    }
-
-}
-@media screen and (min-width:580px){
-    .header_deliveryСase__when {
-        padding-right: 0px;
-    }
-    .header_deliveryContainer{
-        display: none;
-        padding: 0;
-        width: 50%;
-    }
-    .deliveryContainerMenu{
+    .header_deliveryLabel{
+        color:#626262 ;
+        font-size: 13px;
+        line-height: 15px;
+        padding: 0 10px;
         display: flex;
-    }
+        align-items: center;
 
+    }
 }
