--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,6 +1,6 @@
 .header{
-max-width: 1280px;
-    margin: auto;
+    max-width: 100%;
+
 }
 .header_deliveryСontainer{
     display: flex;
@@ -9,7 +9,10 @@ max-width: 1280px;
     justify-content: center;
     padding-top: 24px;
 }
-
+.header-section{
+    max-width: 956px;
+    margin: auto;
+}
 @media screen and (min-width:768px){
 
 }
