добавил кнопку "наверх" и попровил комбобокс в футере добавил стелочку как на макете

--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,33 @@ body{
     transform: rotate(360deg);
   }
 }
+
+.go-top {
+  position: fixed;
+  bottom: 24px;
+  right: 16px;
+  text-align: center;
+  cursor:pointer;
+  display:none;
+  width: 64px;
+  height: 64px;
+  background:rgba(35%, 74%, 35%, 1);
+  line-height: 30px;
+
+}
+
+.go-top:hover {
+  background: rgba(35%, 74%, 35%, 0.8);
+}
+
+.go-top_shape{
+  margin-top: 30%;
+}
+
+@media screen and (min-width:768px) {
+  .go-top {
+    width: 80px;
+    height: 80px;
+
+  }
+}
