--- a/src/components/ComboBox/style.css
+++ b/src/components/ComboBox/style.css
@@ -1,5 +1,4 @@
 .comboBox{
-    background: #3B3B3B;
     width: 100%;
     height: 100%;
     border-radius: 2px;
@@ -10,16 +9,23 @@
     line-height: 15px;
     text-align: left;
     font-family: Roboto;
+
 }
 .containier-comboBox{
+    background: #3B3B3B;
     width: 175px;
     height: 40px;
     display: flex;
     align-items: center;
-
 }
 .comboBox-img{
     position: absolute;
     padding-left: 16px;
 
+}
+.containier-comboBox select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;       /* remove default arrow */
+    background: url("img/SectionShape.svg") no-repeat 95% #3B3B3B;
 }
