--- a/src/components/Dish/style.css
+++ b/src/components/Dish/style.css
@@ -25,7 +25,7 @@
     line-height: 21px;
     text-align: left;
     color: #1D1D1D ;
-    padding-bottom: 40px;
+    padding-bottom: 10px;
 }
 .dish-link{
 text-decoration: none;
@@ -55,4 +55,7 @@ text-decoration: none;
 }
 
 
+}
+.bnt-bucket{
+margin-bottom: 10px;
 }
